[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid==3.3.10",
    "colorama==0.4.6",
    "dill==0.4.0",
    "flake8==7.2.0",
    "isort==6.0.1",
    "mccabe==0.7.0",
    "platformdirs==4.3.8",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pylint==3.3.7",
    "requests>=2.32.4",
    "ruff==0.12.1",
    "tomlkit==0.13.3",
    "uv==0.7.15",
]
